--- a/Client/Components/CategoryComponent.razor
+++ b/Client/Components/CategoryComponent.razor
@@ -740,12 +740,14 @@
         var deleteRes = await Http.DeleteAsync("api/Present/deleteCategory/" + Category.id);
         if (deleteRes.IsSuccessStatusCode)
         {
+            
             deleteCat.InvokeAsync(Category);
         }
         else
         {
             Console.WriteLine(" בעיה במחיקת קטגוריה");
         }
+        deleteBtnClicked = false;
     }
 
     public async void updateTakenSubCatBudget(List<OverDraftBudgetToEdit> subNewBudget)
