Revert "Merge branch 'main' into Dana"
This reverts commit a9b26083db77c5fda02a2b559cf4ea82715978db, reversing
changes made to e0a69e0263ac4ddf2630eff8a75d99b887ae6907.

--- a/Client/Components/SubCategoryComponent.razor
+++ b/Client/Components/SubCategoryComponent.razor
@@ -354,26 +354,13 @@
     bool isOverdraft = false;
     string popupBodyText = "";
     string titleInput = "";
-    string convertedColor = "";
-    string outlineColor = "";
     int titleInputLength = 0;
     public bool openTransOverlay = false;
     string? catOutlineColor = "";
 
     double ogBudget = 0;
-
-    private string _previousColor = "##INITIAL##";
-
-    protected override void OnParametersSet()
-    {
-        base.OnParametersSet();
-        if (_previousColor != subCatColor)
-        {
-            convertCatColors(subCatColor);
-            _previousColor = subCatColor;
-        }
-    }
-
+    //Dictionary<int, double> subSumToUpdate = new Dictionary<int, double>();
+    //double spendingSum = 0;
     //SubCategoryToShow currentSubCat = new SubCategoryToShow();
 
     protected override async Task OnInitializedAsync()
@@ -401,20 +388,15 @@
         }
         else
         {
-            //convertCatColors(subCatColor);
-            base.OnInitialized();
-            convertCatColors(subCatColor);  // Force initial color setup
-            StateHasChanged();
-
-
-            Console.WriteLine("צבע של סאב קטגוריה" + subCatColor);
+            convertCatColors(subCatColor);
         }
         Console.WriteLine("subcat on initialized- " + subCatColor);
     }
 
     public void convertCatColors(string? catColor)
     {
-
+        string convertedColor = "";
+        string outlineColor = "";
         switch (catColor)
         {
             case "#F4B367": //mustard
@@ -483,33 +465,18 @@
                 outlineColor = "rgba(103, 142, 244, 1)";
                 Console.WriteLine("cat color is default");
                 break;
-            case "": //defualt
-                convertedColor = "#678ef421";
-                outlineColor = "rgba(103, 142, 244, 1)";
-                Console.WriteLine("cat color is default");
-                break;
         };
+        subCatColor = "";
+        catOutlineColor = "";
+        for (int i = 0; i < convertedColor.Length; i++)
+        {
+            subCatColor += convertedColor[i];
+        }
 
-        catOutlineColor = outlineColor;
-        subCatColor = convertedColor;
-
-        Console.WriteLine(catOutlineColor + " catOutlineColorזה ה");
-        Console.WriteLine(subCatColor + "subCatColorזה ה");
-
-        //subCatColor = "";
-        //catOutlineColor = "";
-        //for (int i = 0; i < convertedColor.Length; i++)
-        //{
-        //    subCatColor += convertedColor[i];
-        //}
-
-        //for (int i = 0; i < outlineColor.Length; i++)
-        //{
-        //    catOutlineColor += outlineColor[i];
-        //}
-
-
-
+        for (int i = 0; i < outlineColor.Length; i++)
+        {
+            catOutlineColor += outlineColor[i];
+        }
     }
 
     public void openAddTransOverlay()
