--- a/Client/Components/SubCategoryComponent.razor
+++ b/Client/Components/SubCategoryComponent.razor
@@ -59,7 +59,7 @@
             {
 
                 <button class="budget-progress" @onclick="goToTransactionsPage">
-                    @budget /  @totalSpendings ₪
+                    @budget /  @Math.Round(totalSpendings,2) ₪
                 </button>
 
 
@@ -67,7 +67,7 @@
             else
             {
                 <button class="budget-progress" @onclick="goToTransactionsPage">
-                    @totalSpendings ₪ 
+                    @Math.Round(totalSpendings,2) ₪
                 </button>
 
             }
@@ -85,7 +85,7 @@
 
 @if (openTransOverlay)
 {
-    <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCategoryIDToGet" isTransactionOverlayOpen="@openAddTransOverlay" userID="@userID" gapsToUpdateBudgets="gapsToUpdateTheBudget" addTransactionToTotal="addNewTransToTotalSpendings" categoryTypeIndicator="@categoryTypeIndicator" updatedStreak="updateStreak" closeAddTransAfterOverdraft="closeAddTrans" transValueToAdd="updateTotalsIndexTable"></AddTransactionComponent>
+    <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCategoryIDToGet" isTransactionOverlayOpen="@openAddTransOverlay" userID="@userID" gapsToUpdateBudgets="gapsToUpdateTheBudget" addTransactionToTotal="addNewTransToTotalSpendings" categoryTypeIndicator="@categoryTypeIndicator" updatedStreak="updateStreak" closeAddTransAfterOverdraft="closeAddTrans"></AddTransactionComponent>
 
 }
 
@@ -340,10 +340,10 @@
     public EventCallback<double> updateTransactionSum { get; set; }
 
     //[Parameter]
-    //public EventCallback<Dictionary<int,double>> subCatIDtoUpdate { get; set; }
+    //public EventCallback<int> subCatIDtoUpdate { get; set; }
 
     SubCategoryToEdit subCatToEdit = new SubCategoryToEdit();
-    //SubCategoryToEdit ogSubCat = new SubCategoryToEdit();
+    SubCategoryToEdit ogSubCat = new SubCategoryToEdit();
     SubCategoryToUpdate subCategoryToUpdate = new SubCategoryToUpdate();
 
     List<AllUserCategories> userCategories = new List<AllUserCategories>();
@@ -359,8 +359,7 @@
     string? catOutlineColor = "";
 
     double ogBudget = 0;
-    //Dictionary<int, double> subSumToUpdate = new Dictionary<int, double>();
-    //double spendingSum = 0;
+
     //SubCategoryToShow currentSubCat = new SubCategoryToShow();
 
     protected override async Task OnInitializedAsync()
@@ -621,25 +620,18 @@
         }
     }
 
-    public async Task addNewTransToTotalSpendings(double transactionValue)
+    public void addNewTransToTotalSpendings(double transactionValue)
     {
+
 
         totalSpendings += transactionValue;
-        totalSpendings = Math.Round(totalSpendings, 2);
 
-       //await updateTotalsIndexTable(transactionValue);
 
         Console.WriteLine(subCategoryTitle + ": " + totalSpendings + ", latest trans value- " + transactionValue);
-        
-
+        updateTransactionSum.InvokeAsync(transactionValue);
+       
 
     }
-
-    public void updateTotalsIndexTable(double transValue)
-    {
-        updateTransactionSum.InvokeAsync(transValue);
-    }
-
 
     public void goToTransactionsPage()
     {
